--- a/Project Development Phase/Sprint 1/templates/login.html
+++ b/Project Development Phase/Sprint 1/templates/login.html
@@ -1,15 +1,26 @@
+{% extends "bootstrap/base.html" %} {% import "bootstrap/wtf.html" as wtf %}
+{%block title%} Login {% endblock %} {% block styles %} {{super()}}
+<link
+  rel="stylesheet"
+  href="https://inventorymgmt.s3.jp-tok.cloud-object-storage.appdomain.cloud/signin.css"
+/>
+{% endblock%} {% block content %}
 
-<!DOCTYPE html>
-<html>
-<head>
-    <body>
-<h1 align="center" style="color:red;">WELCOME TO OUR PAGE</h1>
- <table border=1 align="center"  style="border:2px solid mediumseagreen;"><tr></tr>
- USER ID: <input type="text" placeholder="USERID" name="name"/><br><br>
-PASSWORD:<input type="password" placeholder="password" name="password"/><br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<input type="button" value="Login" (click)= "login()"/>&nbsp;&nbsp;&nbsp;
-don't have account?<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="/signup">Create an account? </a>
-</table><br><br>
-</body>
-</html>
+<h1 style="text-align: center">login</h1>
+<div class="container">
+  <form class="form-signin" method="POST" action="/login">
+    {{ form.hidden_tag() }} {{ wtf.form_field(form.username) }} {{
+    wtf.form_field(form.password) }} {{ wtf.form_field(form.remember) }}
+    <button class="btn btn-lg btn-primary btn-block" type="submit"
+      >Sign in</button
+    >
+    <p style="padding: 20px">New User? <a href="/signup">Register now</a>!!</p>
+    <a href="/"
+      ><img
+        src="https://inventorymgmt.s3.jp-tok.cloud-object-storage.appdomain.cloud/left-arrow.png"
+        style="width: 20px; height: 20px"
+      />Back to home page</a
+    >
+  </form>
+</div>
+{% endblock %}
