--- a/Project Development Phase/Sprint 3/templates/signup.html
+++ b/Project Development Phase/Sprint 3/templates/signup.html
@@ -1,34 +1,27 @@
-{% extends 'base.html '%} {% block head %}
-<title>Signup page</title>
-{% endblock%} {%block body%}
-<main class="container">
-  <div class="mx-auto mt-5 border bg-light" style="width: 500px">
-    <h2 class="mx-4 mt-2">REGISTER FORM</h2>
-    <div class="mx-4 mt-2 text-danger">{{ meg }}</div>
-    <form action="{{url_for('signup') }}" method="post">
-      <div class="my-2 mx-4">
-        <label for="username">User name</label>
-        <input type="text" class="form-control" placeholder="Ram" name="username" required />
-      </div>
-      <div class="my-2 mx-4">
-        <label for="email">email</label>
-        <input type="text" class="form-control" placeholder="abc@gmail.com" name="email" required />
-      </div>
-      <div class="my-2 mx-4">
-        <label for="password">password</label>
-        <input type="password" class="form-control" placeholder="password" name="password" required />
-      </div>
-      <div class="my-2 mx-4">
-        <label for="retype">retype password</label>
-        <input type="password" class="form-control" placeholder="password" name="retype" required />
-      </div>
-
-      <input type="submit" value="submit" class="btn btn-primary my-4 my-2 mt-2 mx-4" />
-      <div class="note mt-3 text-center">
-        <!--Register form -->
-        <p>already have an account ? please <a href="/login"> login! </a></p>
-      </div>
-    </form>
-  </div>
-</main>
-{% endblock%}
+{% extends "bootstrap/base.html" %} {% import "bootstrap/wtf.html" as wtf %} {%
+block title %} Sign Up {% endblock %} {% block styles %} {{super()}}
+<link
+  rel="stylesheet"
+  href="https://inventorymgmt.s3.jp-tok.cloud-object-storage.appdomain.cloud/signin.css"
+/>
+{% endblock %} {% block content %}
+<h1 style="text-align: center">signup</h1>
+<div class="container">
+  <form class="form-signin" method="POST" action="/signup">
+    {{ form.hidden_tag() }} {{ wtf.form_field(form.username) }} {{
+    wtf.form_field(form.email) }} {{ wtf.form_field(form.password) }}
+    <button class="btn btn-lg btn-primary btn-block" type="submit"
+      >Sign Up</button
+    >
+    <p style="padding: 20px"
+      >Already have an account. <a href="/login">Login</a> !</p
+    >
+    <a href="/"
+      ><img
+        src="https://inventorymgmt.s3.jp-tok.cloud-object-storage.appdomain.cloud/left-arrow.png"
+        style="width: 20px; height: 20px"
+      />Back to home page</a
+    >
+  </form>
+</div>
+{% endblock %}
