--- a/Project Development Phase/Sprint 3/templates/base.html
+++ b/Project Development Phase/Sprint 3/templates/base.html
@@ -1,22 +1,238 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-  <link rel="stylesheet" href="static/css/style.css" />
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
-
-  <!-- <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}"> -->
-  {% block head%}{% endblock %}
-</head>
-
-<body>
-  <div class="container mt-5">{% block body %} {% endblock %}</div>
-</body>
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/bootstrap/bootstrap.min.css')}}"
+    />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/media-query.css')}}"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/f2586e679c.js"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/fontawesome.min.css"
+    />
+    <link
+      href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css"
+      rel="stylesheet"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"
+      crossorigin="anonymous"
+    ></script>
+    {% block title%}{% endblock %}
+  </head>
+  <body class="sb-nav-fixed">
+    <nav
+      class="sb-topnav navbar navbar-expand"
+      style="
+        background-color: #26558d;
+        height: 70px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+      "
+      ><div>
+        <button
+          class="btn btn-link btn-sm order-1 order-lg-0"
+          id="sidebarToggle"
+          href="#"
+        >
+          <i class="fas fa-bars"></i
+        ></button>
+        <a class="navbar-brand" href="/">Inventory Managment App</a>
+      </div>
+      <a
+        class="navbar-brand"
+        style="margin-right: -150px"
+        href="{{ url_for('logout') }}"
+        ><i class="fa-solid fa-arrow-right-from-bracket"></i
+      ></a>
+    </nav>
+    <div id="layoutSidenav">
+      <div id="layoutSidenav_nav">
+        <nav
+          class="sb-sidenav accordion"
+          id="sidenavAccordion"
+          style="background-color: #00326d"
+        >
+          <div class="sb-sidenav-menu">
+            <div class="nav">
+              <div class="sb-sidenav-menu-heading" style="color: #ffffff8f"
+                >Core</div
+              >
+              <a
+                class="nav-link"
+                href="/dashboard"
+                style="
+                  color: #fff;
+                  font-size: 18px;
+                  font-family: 'Poppins', sans-serif;
+                  font-weight: 500;
+                "
+              >
+                <div class="sb-nav-link-icon" style="color: #000"
+                  ><img
+                    src="https://inventorymgmt.s3.jp-tok.cloud-object-storage.appdomain.cloud/dashboard1.png"
+                    style="width: 35px; height: 35px; margin-bottom: 5px"
+                /></div>
+                Dashboard
+              </a>
+              <div class="sb-sidenav-menu-heading" style="color: #ffffff8f"
+                >Sections</div
+              >
+              <a
+                class="nav-link"
+                href="/products/"
+                style="
+                  color: #fff;
+                  font-size: 18px;
+                  font-family: 'Poppins', sans-serif;
+                  font-weight: 500;
+                "
+              >
+                <div class="sb-nav-link-icon" style="color: #000"
+                  ><img
+                    src="https://inventorymgmt.s3.jp-tok.cloud-object-storage.appdomain.cloud/product.png"
+                    style="width: 35px; height: 35px"
+                /></div>
+                Products
+              </a>
+              <a
+                class="nav-link"
+                href="/locations/"
+                style="
+                  color: #fff;
+                  font-size: 18px;
+                  font-family: 'Poppins', sans-serif;
+                  font-weight: 500;
+                "
+              >
+                <div class="sb-nav-link-icon" style="color: #000"
+                  ><img
+                    src="https://inventorymgmt.s3.jp-tok.cloud-object-storage.appdomain.cloud/product-design.png"
+                    style="width: 35px; height: 35px"
+                /></div>
+                Locations
+              </a>
+              <a
+                class="nav-link"
+                href="/movements/"
+                style="
+                  color: #fff;
+                  font-size: 18px;
+                  font-family: 'Poppins', sans-serif;
+                  font-weight: 500;
+                "
+              >
+                <div class="sb-nav-link-icon" style="color: #000"
+                  ><img
+                    src="https://inventorymgmt.s3.jp-tok.cloud-object-storage.appdomain.cloud/bar-chart.png"
+                    style="width: 35px; height: 35px"
+                /></div>
+                Movements
+              </a>
+              <a
+                class="nav-link"
+                href="/product-balance/"
+                style="
+                  color: #fff;
+                  font-size: 18px;
+                  font-family: 'Poppins', sans-serif;
+                  font-weight: 500;
+                "
+              >
+                <div class="sb-nav-link-icon" style="color: #000"
+                  ><img
+                    src="https://inventorymgmt.s3.jp-tok.cloud-object-storage.appdomain.cloud/balance.png"
+                    style="width: 35px; height: 35px"
+                /></div>
+                Product Balance Report
+              </a>
+            </div>
+          </div>
+        </nav>
+      </div>
+      <div id="layoutSidenav_content"> {% block content %} {% endblock %} </div>
+    </div>
+    <style>
+      .sb-topnav .navbar-brand {
+        width: 225px;
+        padding-left: 20px;
+        padding-right: 1rem;
+        margin: 0;
+        font-size: 25px;
+        color: #fff;
+        font-family: "Poppins", "sans-serif";
+      }
+      .btn-sm {
+        padding: 0.25rem 0.5rem;
+        font-size: 25px;
+        line-height: 1.5;
+        border-radius: 0.2rem;
+        margin-left: 10px;
+        color: #fff;
+        margin-left: 10px;
+        font-size: 25px;
+        box-shadow: none;
+        outline: none;
+      }
+      @media (min-width: 320px) and (max-width: 480px) {
+        .sb-topnav .navbar-brand {
+          font-size: 20px;
+          padding-right: 1rem;
+          margin: 0;
+          color: #fff;
+        }
+        .btn-sm {
+          padding: 0.25rem 0.5rem;
+          font-size: 25px;
+          line-height: 1.5;
+          border-radius: 0.2rem;
+          color: #fff;
+          margin-left: -220px;
+          box-shadow: none;
+          outline: none;
+        }
+      }
+      @media (min-width: 481px) and (max-width: 767px) {
+        .sb-topnav .navbar-brand {
+          width: 225px;
+          padding-left: 20px;
+          padding-right: 1rem;
+          margin: 0;
+          color: #fff;
+        }
+      }
+    </style>
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      crossorigin="anonymous"
+    ></script>
+    <script src="{{ url_for('static', filename='js/bootstrap/scripts.js')}}"></script>
+    <script
+      src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js"
+      crossorigin="anonymous"
+    ></script>
+    <script src="{{ url_for('static', filename='js/datatables-demo.js')}}"></script>
+    <script src="{{ url_for('static', filename='js/script.js')}}"></script>
+  </body>
 </html>
