--- a/Project Development Phase/Sprint 3/templates/dashboard.html
+++ b/Project Development Phase/Sprint 3/templates/dashboard.html
@@ -1,68 +1,159 @@
-{% extends 'base2.html '%} {% block head %}
-<title>Dashboard</title>
-{% endblock%} {%block body%}
-<h2>Dashboard</h2>
-<p>
-  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-</p>
-{% include 'table.html' %}
-<div class="forms-wrapper">
-  <form action="{{url_for('UpdateStocks') }}" method="post">
-    <h3>Update Stock</h3>
-    <div class="field">
-      <label class="custom-label" for="item"> Enter Item</label>
-      <input class="text-inputs" type="text" name="item" placeholder="milk" />
+{% extends 'base.html' %} {% block title %}
+<title>Inventory Management App</title>
+{% endblock %} {% block content %}
+<style>
+  .h1 {
+    font-size: 18px;
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+  }
+</style>
+<main>
+  <div class="container-fluid">
+    <h1
+      class="mt-4"
+      style="
+        font-size: 30px;
+        font-family: 'Poppins', sans-serif;
+        font-weight: 500;
+      "
+      >Dashboard</h1
+    >
+    <ol class="breadcrumb mb-4">
+      <li class="breadcrumb-item active">Dashboard</li>
+    </ol>
+    <div class="card mb-4">
+      <div
+        class="card-header"
+        style="
+          font-size: 20px;
+          font-family: 'Poppins', sans-serif;
+          font-weight: 500;
+        "
+        ><img
+          src="https://inventorymgmt.s3.jp-tok.cloud-object-storage.appdomain.cloud/package.png"
+          style="width: 35px; height: 35px"
+        />
+        Products</div
+      >
+      <div class="card-body">
+        <div class="card mb-4">
+          <div class="card-header">
+            <img
+              src="https://inventorymgmt.s3.jp-tok.cloud-object-storage.appdomain.cloud/frequency.png"
+              style="width: 35px; height: 35px"
+            />
+            Products Table
+          </div>
+          <div class="card-body">
+            <div class="table-responsive">
+              {% if products|length < 1 %}
+              <h4>There are no Products, add one above</h4>
+              {% else %}
+              <table
+                class="table table-bordered"
+                id="dataTable"
+                width="100%"
+                cellspacing="0"
+              >
+                <thead>
+                  <tr>
+                    <th>Product Name</th>
+                    <th>Date</th>
+                    <th>Actions</th>
+                  </tr>
+                </thead>
+                <tfoot>
+                  <tr>
+                    <th>Product Name</th>
+                    <th>Date</th>
+                    <th>Actions</th>
+                  </tr>
+                </tfoot>
+                <tbody>
+                  {% for product in products %}
+                  <tr>
+                    <td>{{ product.product_id }}</td>
+                    <td>{{ product.date_created.date() }}</td>
+                    <td>
+                      <a href="/delete-product/{{ product.product_id }}"
+                        >Delete</a
+                      >
+                      <br />
+                      <a href="/update-product/{{ product.product_id }}"
+                        >Update</a
+                      >
+                    </td>
+                  </tr>
+                  {% endfor %}
+                </tbody>
+              </table>
+              {% endif %}
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="field">
-      <label for="input-field">Choose a field :</label>
-      <select name="input-field" id="field">
-        <option value="NAME">NAME</option>
-        <option value="PRICE_PER_QUANTITY">PRICE_PER_QUANTITY</option>
-        <option value="QUANTITY">QUANTITY</option>
-      </select>
+    <div class="card mb-4">
+      <div class="card-header">Locations</div>
+      <div class="card-body">
+        <div class="card mb-4">
+          <div class="card-header">
+            <img
+              src="https://inventorymgmt.s3.jp-tok.cloud-object-storage.appdomain.cloud/product-design.png"
+              style="width: 35px; height: 35px"
+            />
+            Locations Table
+          </div>
+          <div class="card-body">
+            <div class="table-responsive">
+              {% if locations|length < 1 %}
+              <h4>There are no Locations, add one above</h4>
+              {% else %}
+              <table
+                class="table table-bordered"
+                id="dataTable"
+                width="100%"
+                cellspacing="0"
+              >
+                <thead>
+                  <tr>
+                    <th>Location Name</th>
+                    <th>Date</th>
+                    <th>Actions</th>
+                  </tr>
+                </thead>
+                <tfoot>
+                  <tr>
+                    <th>Location Name</th>
+                    <th>Date</th>
+                    <th>Actions</th>
+                  </tr>
+                </tfoot>
+                <tbody>
+                  {% for location in locations %}
+                  <tr>
+                    <td>{{ location.location_id }}</td>
+                    <td>{{ location.date_created.date() }}</td>
+                    <td>
+                      <a href="/delete-location/{{ location.location_id }}"
+                        >Delete</a
+                      >
+                      <br />
+                      <a href="/update-location/{{ location.location_id }}"
+                        >Update</a
+                      >
+                    </td>
+                  </tr>
+                  {% endfor %}
+                </tbody>
+              </table>
+              {% endif %}
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="field">
-      <label class="custom-label" for="input-value"> Enter Value</label>
-      <input
-        class="text-inputs"
-        type="text"
-        name="input-value"
-        placeholder=" "
-      />
-    </div>
-    <button class="submit-button">Update</button>
-  </form>
-
-  <form action="{{url_for('addStocks') }}" method="post">
-    <h3>Add New Stock</h3>
-    <div class="field">
-      <label class="custom-label" for="item"> Enter the item</label>
-      <input class="text-inputs" name="item" type="text" placeholder="juice" />
-    </div>
-    <div class="field">
-      <label class="custom-label" for="quantity"> Enter quantity</label>
-      <input
-        class="text-inputs"
-        type="number"
-        name="quantity"
-        placeholder="200"
-      />
-    </div>
-    <div class="field">
-      <label class="custom-label" for="price"> Enter price</label>
-      <input class="text-inputs" type="number" name="price" placeholder="25" />
-    </div>
-    <button class="submit-button">Add Stock</button>
-  </form>
-  <form action="{{url_for('deleteStocks') }}" method="post">
-    <h3>Remove stocks</h3>
-    <div class="field">
-      <label class="custom-label" for="item"> Enter the item</label>
-      <input class="text-inputs" name="item" type="text" placeholder="juice" />
-    </div>
-    <button class="submit-button red-button">Remove</button>
-  </form>
-</div>
-
-{% endblock%}
+  </div>
+</main>
+{% endblock %}
