--- a/Project Development Phase/Sprint 3/templates/login.html
+++ b/Project Development Phase/Sprint 3/templates/login.html
@@ -1,30 +1,26 @@
-{% extends 'base.html '%}
-{% block head %}
-<title>Login page</title>
-{% endblock%}
+{% extends "bootstrap/base.html" %} {% import "bootstrap/wtf.html" as wtf %}
+{%block title%} Login {% endblock %} {% block styles %} {{super()}}
+<link
+  rel="stylesheet"
+  href="https://inventorymgmt.s3.jp-tok.cloud-object-storage.appdomain.cloud/signin.css"
+/>
+{% endblock%} {% block content %}
 
-{%block body%}
-
-<main class="container ">
-    <div class="mx-auto mt-5 border bg-light login-card " style="width:500px;">
-        <h2 class='mx-4 mt-2'>LOGIN</h2>
-        <form action="{{url_for('login') }}" method="post">
-            <div class="mx-4 mt-2 text-danger">{{ msg }}</div>
-            <div class="my-2 mx-4">
-                <label for="username">username</label>
-                <input type="text" class="form-control" placeholder="adc@gmail.com" name="username" required />
-            </div>
-            <div class="my-2 mx-4">
-                <label for="password_1">password</label>
-                <input type="password" class="form-control" name="password_1" required />
-            </div>
-            <input type="submit" value="submit" class="btn btn-primary my-4 mt-2 mx-4" />
-
-        </form>
-        <p>Don't have an account?<a href="{{ url_for('signup') }}"> Sign Up</a>
-    </div>
-</main>
-</p>
-
-</main>
-{% endblock%}
+<h1 style="text-align: center">login</h1>
+<div class="container">
+  <form class="form-signin" method="POST" action="/login">
+    {{ form.hidden_tag() }} {{ wtf.form_field(form.username) }} {{
+    wtf.form_field(form.password) }} {{ wtf.form_field(form.remember) }}
+    <button class="btn btn-lg btn-primary btn-block" type="submit"
+      >Sign in</button
+    >
+    <p style="padding: 20px">New User? <a href="/signup">Register now</a>!!</p>
+    <a href="/"
+      ><img
+        src="https://inventorymgmt.s3.jp-tok.cloud-object-storage.appdomain.cloud/left-arrow.png"
+        style="width: 20px; height: 20px"
+      />Back to home page</a
+    >
+  </form>
+</div>
+{% endblock %}
